# ChatBotAI

./: .dockerignore  .env  .env.docker  .gitignore  ACHIEVEMENTS.md  AI_INVOICE_TRAINING_GUIDE.md  AI_TRAINING_SYSTEM.md  AI_VOICE_CAMERA_GUIDE.md  API_DOCUMENTATION.md  API_TEST_GUIDE.md  AUTH_API_TESTING_GUIDE.md  AZURE_API_DIAGRAM.txt  AZURE_API_QUICK_REF.md  AZURE_API_USAGE.md  AZURE_DOCUMENT_INTELLIGENCE_GUIDE.md  AZURE_RAG_WORKFLOW.md  AZURE_SETUP_GUIDE.md  AZURE_STORAGE_API_GUIDE.md  AZURE_STORAGE_SUMMARY.md  BERT_RASA_ARCHITECTURE.md  COMPLETION_REPORT.md  DATA_STORAGE_DIAGRAM.txt  DATA_STORAGE_EXPLAINED.md  DOCKER_README.md  EVENT_DRIVEN_README.md  FILE_MAP.md  FINAL_SUMMARY.txt  FINAL_SYSTEM_CHECK.md  GROQ_IMPLEMENTATION_COMPLETE.md  HYBRID_CHAT_README.md  IMPLEMENTATION_COMPLETE.md  LOCAL_DEVELOPMENT.md  MICROSERVICES_ANALYSIS.md  MIGRATION_SUMMARY.md  Makefile  OCR_STATUS_REPORT.md  OCR_UPLOAD_TO_DB_TEST_GUIDE.md  POSTGRESQL_FILE_STORAGE.md  POSTGRESQL_STORAGE_COMPLETE.md  QUICK_START.md  (+55 more)
backend/: .env  .env.example  Dockerfile  README.md  __init__.py  admin_api.py  alembic.ini  app.py  auth_api.py  celery_config.py  celery_worker.py  chatbot.db  clear_mock_data.py  config.py  main.py  (+16 more)
chatbot/: .env  .env.example  DEVELOPMENT.md  Dockerfile  README.md  app.py  config.py  pyproject.toml  requirements.txt
chatbot/handlers/: chat_handler.py  chat_handler_backup.py  hybrid_chat_handler.py  rasa_handler.py
chatbot/models/: ai_model.py
chatbot/services/: google_ai_service.py
chatbot/static/: index.html
chatbot/utils/: database_tools.py  training_client.py
(+152 files in other folders)
